--- a/style.css
+++ b/style.css
@@ -1,166 +1,170 @@
-body
-{
-margin:0;
+body{
+margin: 0 auto;
+font-family: 'PT Mono', monospace;
+font-size: 2.5vh;
+color:#010101;
 }
 
-.main
-{
-width: 100%;
-height: 25vh;
-background-color: #000000;
+*,
+*:before,
+*:after{
+box-sizing: border-box;
 }
 
-.titular
-{
-width:100%;
-max-width:1400px;
-margin:0 auto;
+h1, h2, h3, h4, h5, h6 {
+margin: 0 auto;
+}
+
+/* main */
+.main{
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
 }
 
 .headder{
-width: 100%;
-height: 25vh;
-padding-top:2%;
+  width: 100%;
+  height: 25vh;
+  background-color: #010101;
+
 }
 
 .sites{
-display: flex;
-justify-content: space-between;
-margin: 0 auto;
-}
-
-#momomo
-{
-margin-left:85%;
-}
-
-.inst__name
-{
-font-size: 4vh;
-color: #fff;
-margin-left:6%;
-margin-top:-3.5%;
-font-family: 'PT Mono', monospace;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
 .inst__z{
-width: 10vh;
-height: 10vh;
+  width: 10vh;
+  height: 10vh;
 }
 
-.nav{
-width: 100%;
-display: flex;
-justify-content:space-between;
-margin-top:1%;
+  .inst__name{
+    font-size: 4vh;
+    color: #010101;
+  }
 
-}
 
-.nav__link{
-font-size: 4vh;
-color: #FFF;
-margin-top: 5vh;
-text-decoration:none;
-font-family: 'PT Mono', monospace;
-}
 
-#sush
-{
-margin-left:-55%;
-}
-
-#roll
-{
-margin-right:-55%;
-}
-
-.pic__logo
-{
+.pic__logo{
 margin: 0 auto;
 display: flex;
 justify-content: center;
-margin-top:-10%;
-width: 70vh;
-height: 50vh;
+
 }
 
-.nav2
-{
-display:flex;
-justify-content:space-between;
+.pict__logo{
+  margin: 0 auto;
+  width: 70vh;
+  height: 50vh;
 }
 
-.nav2__link
-{
-color: #000000;
-font-size: 6vh;
-text-decoration:none;
-font-family: 'PT Mono', monospace;
+  /* nav */
+  .nav{
+    width: 100%;
+    height: 30vh;
+    display: flex;
+
+  }
+
+  .nav__link{
+    font-size: 4vh;
+    color: #FF0000;
+    margin-top: 5vh;
+  }
+
+
+.nav2{
+  width: 100%;
+  font-size: 6vh;
+  color: #010101;
+  margin-top: 3vh;
+}
+.nav2__link{
+  color: #010101;
+  text-align: left;
+  margin-left: 7vh;
 }
 
-.act
-{
-color: #000000;
-font-size: 6vh;
-text-decoration:none;
-font-family: 'PT Mono', monospace;
-margin-top:12%;
-text-align:center;
+.nav3__link{
+  color: #010101;
+  text-align: right;
+  margin-right: 7vh;
 }
 
-.timetable
-{
-display: flex;
-justify-content: center;
-margin-top:30px;
+
+
+/* inform */
+.inform{
+  padding: 0 5vh ;
+  width: 100%;
+  height: 100vh;
+  color:#010101;
+
+
 }
 
-.time
-{
-border:5px solid #000000;
-color:#FFFFFF;
-font-size: 3vh;
-font-family: 'PT Mono', monospace;
-background-color:#000000;
-width: 35vh;
-text-align:center;
-padding:3px 3px;
+.timetable{
+  width: 25vh;
+  height:30vh;
+  background-color: #010101;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
 }
 
-.info
-{
-display:flex;
-justify-content:space-between;
-margin-top:5%;
-align-items:center;
+.time{
+  color: #fff;
+  font-size: 3vh;
+  text-align: center;
+  margin-top: 20vh;
+
 }
 
-.addres{
-font-size: 4vh;
-color: #000000;
-font-family: 'PT Mono', monospace;
+.adressss{
+  text-align: right;
+  font-size: 3vh;
+  color: #010101;
+  margin: 0 auto;
+
 }
 
 .r{
-font-size: 4vh;
-color: #000000;
-font-family: 'PT Mono', monospace;
+  font-size: 4vh;
+  color: #010101;
+  text-align: left;
+  margin-top: 14vh;
+
 }
 
+
+
+
+
+
+
+
+
+
+
+
 /* menu */
-.menu
-{
-padding-top:40%;
+.menu{
+width: 100%;
+height: 100%;
+background-color: #010101;
 margin:0 auto;
+
 }
 
 .menu__images{
-background-color: #000000;
 width: 100%;
 height: 100%;
 display: flex;
 justify-content: space-between;
 padding: 10vh 0;
+
 
 }
 
@@ -181,49 +185,50 @@ margin-top:20%;
 }
 
 .podpis{
-color: #fff;
-font-size: 4vh;
-text-align: center;
-text-transform: uppercase;
+  color: #fff;
+  font-size: 4vh;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .pictures:hover{
-display:block;
-width: 45vh;
-height: 45vh;
-left: 30vh;
-top: 17vh;
+  display:block;
+  width: 45vh;
+  height: 45vh;
+  left: 30vh;
+  top: 17vh;
 }
+
+
 
 /* section */
 
 .section{
-width: 100%;
-height: 100%;
-margin:0 auto;
-background-color: #010101;
+  width: 100%;
+  height: 100%;
+  margin:0 auto;
+  background-color: #010101;
 
 }
 
 .container{
-background-color: #fff;
-width: 100%;
-height: 70vh;
-margin:0 auto;
-padding-top:5%;
+  background-color: #fff;
+  width: 100%;
+  height: 90vh;
+  margin:0 auto;
 }
 
 .all__items{
-display: flex;
-justify-content:flex-start;
-padding:2%;
+  display: flex;
+  justify-content:flex-start;
+  padding:2%;
 }
 
 .im__add{
-width: 20vh;
-height: 20vh;
-left: 0;
-top:0;
+  width: 20vh;
+  height: 20vh;
+  left: 0;
+  top:0;
 }
 
 #pic3
@@ -238,67 +243,51 @@ margin-top:15%;
 margin-top:15%;
 }
 
+
 .im__add:hover{
-display:block;
-width: 15vh;
-height: 15vh;
-left: 0vh;
-top: 0vh;
+  display:block;
+  width: 15vh;
+  height: 15vh;
+  left: 0vh;
+  top: 0vh;
 }
 
 /* text */
 
 .text{
-display: block;
-width: 80vh;
-height:58vh;
-text-align: left;
-color: #010101;
-margin-left: 5vh;
-margin-top: 5vh;
+  display: block;
+  width: 80vh;
+  height:58vh;
+  text-align: left;
+  color: #010101;
+  margin-left: 5vh;
+  margin-top: 5vh;
 }
+
 
 /* bottom */
 
-.bottom
-{
-width: 100%;
-height: 30vh;
-background-color: #000000;
+.bottom{
+  width: 100%;
+  height: 30vh;
+  background: #010101;
+  margin: 0 auto;
+
 }
 
-.bot__un
-{
-padding-top:3.5%;
-width:100%;
-max-width:1400px;
-margin:0 auto;
+.inst_z{
+  width: 15vh;
+  height: 15vh;
 }
 
-.inst_z
-{
-width: 15vh;
-height: 15vh;
+.inst{
+
+  text-align: left;
+  color: #fff;
+
 }
 
-.insta_txt
-{
-color: #fff;
-font-size: 4vh;
-font-family: 'PT Mono', monospace;
-margin-left:-40%;
-}
-
-.adress
-{
-color: #ffffff;
-font-size: 3vh;
-font-family: 'PT Mono', monospace;
-}
-
-.inst
-{
-display:flex;
-justify-content:space-between;
-align-items:center;
+.adress{
+  text-align: right;
+  color: #fff;
 }
